--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <h1>Titulo editado otra vez</h1>
 
     <form action="#" method="GET">
+        <input type="text" name="firstName" id="firstName">
         <input type="button" value="Enviar">
     </form>
 </body>
