--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <form action="#" method="GET">
         <input type="text" name="firstName" id="firstName">
         <input type="button" value="Enviar">
-        <img src="#" alt="Test">
+        <img src="##" alt="Test">
     </form>
 </body>
 </html>
